Fixed image locating problem.