@@ -41,8 +41,8 @@ public abstract class LoginSuccessPageValidator {
 		if (appDriver != null) {
 			this.region = (region == null)
 					? new Region(new Rectangle(0, 0,
-							new Double(appDriver.getAppConfig().getBrowserWindowSize().getWidth()).intValue(),
-							new Double(appDriver.getAppConfig().getBrowserWindowSize().getHeight()).intValue()))
+							Double.valueOf(appDriver.getAppConfig().getBrowserWindowSize().getWidth()).intValue(),
+							Double.valueOf(appDriver.getAppConfig().getBrowserWindowSize().getHeight()).intValue()))
 					: region;
 		}
 	}
